--- a/client/tech-news-app/public/index.html
+++ b/client/tech-news-app/public/index.html
@@ -10,31 +10,18 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
 
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-<!--    <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">-->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+          integrity="sha256-MfvZlkHCEqatNoGiOXveE8FIwMzZg4W85qfrfIFBfYc= sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
+          crossorigin="anonymous">
 
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css"/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
-    <!--    <link href="../css/libraries/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">-->
-    <!--    <link href="../css/libraries/styles.css" rel="stylesheet" id="bootstrap-css">-->
-    <!--    <link href="../css/libraries/fontawesome-5.10.1/css/all.css" rel="stylesheet">-->
-
-    <!--    <script src="../js/libraries/bootstrap.min.js"></script>-->
-    <!--    <script src="../js/libraries/jquery-3.3.1.slim.min.js"></script>-->
-    <!--    <script src="../js/libraries/popper.min.js"></script>-->
-
     <title>Tech-news - Твой новостной портал</title>
-    <style>
-        body{
-            background: radial-gradient(40% 50%, #FAECD5, #CAE4D8);
-        }
-    </style>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
